chore: add new option to servers

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ QUICK_PASS_PIN=tu-pin
 # Configuración de logs (opcional)
 # Si no se especifica, se usa ~/.config/client-infs/logs/
 # LOGS_PATH=/ruta/personalizada/para/logs
+
+SERVER_INFO_FILE_PATH=un/path/elegido
