--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
 
 [project.scripts]
 inf = "client_infs.cli:main"
+quick = "client_infs.ui.quick_pass_flows:fichar_flow"
 
 [project.urls]
 Repository = "https://github.com/joalvarezdev/pyme"
