--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "client_infs"
 version = "0.1.0"
 description = "Aplicacion de consola para gestionar tareas en INFOSIS"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10.12"
 authors = [
     { name = "INFOSIS Team" }
 ]
@@ -12,6 +12,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
